refactor: restructure code flow
